fix: Fixed global wrapper stretching on full screen on resolutions higher than fullHD

--- a/App/src/styles/style.scss
+++ b/App/src/styles/style.scss
@@ -32,6 +32,7 @@ body {
 .wrapper {
   background: linear-gradient(135deg, #545c80, #1f2435);
   border-radius: 20px;
+  max-width: 1815px;
   width: 100%;
   min-height: 90vh;
   box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.2);
